--- a/css/styles.css
+++ b/css/styles.css
@@ -57,15 +57,38 @@ body {
 /* Components */
 
 .container {
-  max-width: 1158px;
-  padding: 0 15px;
-  margin: 0 auto;
+  max-width: 428px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
-.section {
-  padding-top: 120px;
-  padding-bottom: 120px;
+@media screen and (min-width: 768px) {
+  .container{
+    max-width: 768px;
+  }
 }
+
+@media screen and (min-width: 1158px) {
+  .container{
+    max-width: 1158px;
+  }
+}
+
+
+.section {
+  padding-top: 96px;
+  padding-bottom: 96px;
+}
+
+@media screen and (min-width: 1158px) {
+  .section {
+    padding-top: 120px;
+    padding-bottom: 120px;
+  }
+}
+
 
 .section-title {
   font-size: 36px;
@@ -91,33 +114,41 @@ body {
 }
 
 .page-header-container {
-  display: flex;
-  align-items: center;
+  display: none;
+}
+
+@media screen and (min-width: 768px) {
+  .page-header-container {
+    display: flex;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .page-header-container {
+    align-items: center;
+  }
 }
 
 .page-nav {
   display: flex;
   align-items: center;
+  margin-right: auto;
 }
 
 .menu {
   display: flex;
-}
-
-.menu-item:not(:last-child) {
-  margin-right: 40px;
+  gap: 40px;
 }
 
 .contact-list {
   display: flex;
+  gap: 40px;
 }
 
-.contact {
-  margin-left: auto;
-}
-
-.contact-item:not(:last-child) {
-  margin-right: 40px;
+@media screen and (max-width: 1158px) {
+  .contact-list {
+    display: block;
+  }
 }
 
 .logo {
@@ -168,12 +199,10 @@ body {
 }
 
 .contact-link {
-  padding-top: 24px;
-  padding-bottom: 24px;
-  display: block;
+  padding: 24px 0;
 
   font-style: normal;
-  font-size: 16px;
+  font-size: 12px;
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--primary-text-color);
@@ -186,36 +215,221 @@ body {
   color: var(--primary-brand-color);
 }
 
+@media screen and (min-width: 1158px) {
+  .contact-link {
+    font-size: 16px;
+  }
+}
+
+
+/* Mobile-menu */
+
+.header-container-mobile {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 24px 16px;
+}
+
+@media screen and (min-width: 768px) {
+  .header-container-mobile {
+    display: none;
+  }
+}
+
+.menu-burger {
+  border: none;
+  cursor: pointer;
+  stroke: var(--secondary-text-color);
+  /* background-color: var(--background-page-color); */
+  transition: transform var(--transition-hover);
+}
+
+/* .menu-burger-icon {
+  display: inline-block;
+  stroke: #2E2F42;
+} */
+
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+
+  padding: 80px 35px 40px 40px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: space-between;
+
+  background-color: var(--background-page-color);
+  box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+  
+  transform: translateX(100%);
+  transition: transform var(--transition-hover);
+}
+
+.mobile-menu.is-open {
+  transform: translateX(0);
+}
+
+
+.mobile-link {
+  display: block;
+  margin-bottom: 40px;
+
+  font-weight: 700;
+  font-size: 36px;
+  letter-spacing: 0.02em;
+  line-height: 1.11;
+  text-decoration: none;
+  text-transform: capitalize;
+
+  color: var(--secondary-text-color);
+  transition: color var(--transition-hover);
+
+}
+
+.mobile-link:hover,
+.mobile-link:focus {
+  color: var(--pressed-btn-color);
+}
+
+.mobile-link-list {
+  list-style: none;
+}
+
+.mobile-link-list li:last-child a {
+  margin-bottom: 0;
+}
+
+.mobile-adress {
+  display: block;
+}
+
+.mobile-contact-tel {
+  display: block;
+  margin-bottom: 40px;
+
+  font-style: normal;
+  font-weight: 600;
+  font-size: 36px;
+  line-height: 1.11;
+  text-decoration: none;
+
+  color: var(--primary-brand-color);
+
+  transition: color var(--transition-hover);
+}
+
+.mobile-contact-tel:hover,
+.mobile-contact-tel:focus {
+  color: var(--pressed-btn-color);
+}
+
+.mobile-contact-mail {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+
+  color: var(--secondary-text-color);
+
+  transition: color var(--transition-hover);
+}
+
+.mobile-contact-mail:hover,
+.mobile-contact-mail:focus {
+  color: var(--pressed-btn-color);
+}
+
+.mobile-contact-list {
+  list-style: none;
+}
+
+.socials-list-mobile {
+  flex-wrap: wrap;
+}
+
 
 /* Hero */
 
-.section.hero {
-  padding-top: 188px;
-  padding-bottom: 188px;
-}
-
 .hero {
   max-width: 1440px;
-  height: 600px;
+  /* height: 600px;  */
+  min-width: 320px;
+  padding: 112px 0;
   margin: 0 auto;
+
   background-color: var(--secondary-text-color);
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office.jpg');
+
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (max-width: 767px) {
+  .hero{
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office@2x.jpg');
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 768px),
+screen and (min-resolution: 192dpi) and (min-width: 768px),
+screen and (min-resolution: 2dppx) and (min-width: 768px) {
+  .hero{
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office@2x.jpg');
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 1158px),
+screen and (min-resolution: 192dpi) and (min-width: 1158px),
+screen and (min-resolution: 2dppx) and (min-width: 1158px) {
+  .hero{
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office@2x.jpg');
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .hero {
+    max-width: 1440px;
+    padding: 188px 0;
+  }
+}
+
 .hero-title {
-  max-width: 496px;
+  max-width: 320px;
   margin-right: auto;
-  margin-bottom: 48px;
+  margin-bottom: 72px;
   margin-left: auto;
 
-  font-size: 56px;
-  line-height: 1.07;
+  font-size: 36px;
+  line-height: 1.11;
   text-align: center;
   letter-spacing: 0.02em;
+  text-transform: capitalize;
+
   color: var(--background-page-color);
+}
+
+@media screen and (min-width: 768px) {
+  .hero-title {
+    max-width: 496px;
+    margin-bottom: 48px;
+
+    font-size: 56px;
+    line-height: 1.07;
+
+    text-transform: none;
+  }
 }
 
 .hero-btn {
@@ -229,8 +443,10 @@ body {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.04em;
+
   color: var(--background-page-color);
   background: var(--pressed-btn-color);
+
   cursor: pointer;
   border-radius: 4px;
   border: none;
@@ -242,6 +458,7 @@ body {
 .hero-btn:focus {
   background-color: var(--primary-brand-color);
 }
+
 
 /* Features */
 
@@ -258,38 +475,118 @@ body {
   overflow: hidden;
 }
 
-.features-list {
-  display: flex;
-  gap: 24px;
+@media screen and (min-width: 768px) {
+  .features-list {
+    display: flex;
+    gap: 0px 24px;
+    flex-wrap: wrap;
   }
-
-.features-item {
-  flex-basis: calc((100% - 72px)/ 4);
 }
 
-.features-thumb{
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 112px;
-  margin-bottom: 8px;
-
-  background: var(--background-light-mode);
-  border-radius: 4px;
+@media screen and (max-width: 767px) {
+  .features-list >.features-item:not(:last-child) {
+    margin-bottom: 72px;
+  }
 }
 
-.features-icons{
-  width: 64px;
-  height: 64px;
-
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .features-item {
+    flex-basis: calc((100% - 24px)/ 2)
+  }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .features-list {
+    gap: 72px 24px;
+  }
+  /* .features-list >.features-item:nth-child(-n + 2) {
+    margin-bottom: 72px;
+  } */
+}
+  
+@media screen and (min-width: 1158px) {
+  .features-item {
+    flex-basis: calc((100% - 72px)/ 4)
+  }
+}
+
+@media screen and (max-width: 1157px) {
+  .features-thumb {
+    display: none;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .features-thumb {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 112px;
+    margin-bottom: 8px;
+
+    background: var(--background-light-mode);
+    border-radius: 4px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .features-icons {
+    width: 64px;
+    height: 64px;
+  }
+}
+
+@media screen and (max-width: 1157px) {
+  .features-item >h3 {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.11;
+  
+    text-align: center;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+  
+    color: var(--secondary-text-color);
+  }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .features-item >h3 {
+    text-align: left;
+  }
+}
+
 
 .features-item >h3{
   margin-bottom: 8px;
 }
 
+@media screen and (max-width: 1157px) {
+  .features-item >p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.5;
+  
+    text-align: left;
+    letter-spacing: 0.02em;
+    text-transform: capitalize;
+  
+    color: var(--primary-text-color);
+  }
+}
+
 
 /* About */
+
+@media screen and (max-width: 1157px) {
+  .section.about{
+    display: none;
+  }
+}
 
 .section.about{
   padding-top: 0;
@@ -324,7 +621,26 @@ body {
 
 .team-list {
   display: flex;
-  gap: 24px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 72px;
+}
+
+@media screen and (min-width: 768px) {
+  .team-list {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: center;
+    gap: 64px 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .team-list {
+    gap: 24px;
+  }
 }
 
 .team-item {
@@ -386,6 +702,23 @@ body {
 }
 
 
+/* Socials-icon-mobile */
+
+.socials-list-mobile {
+  flex-direction: row;
+  align-items: center;
+  margin: 0;
+  padding: 0;
+  gap: 56px;
+}
+
+.socials-icon-mobile {
+  width: 24px;
+  height: 24px;
+  fill: currentColor;
+}
+
+
 /* Customers */
 
 .customers-title {
@@ -395,13 +728,40 @@ body {
 
 .customers-list {
   display: flex;
-  gap: 24px;
+  justify-content: center;
+  flex-wrap: wrap;
+  align-items: center;
+  gap: 72px 16px;
+} 
+
+@media screen and (min-width: 768px)  {
+  .customers-list {
+    gap: 72px 24px;
+  } 
+}
+
+@media screen and (min-width: 1158px)  {
+  .customers-list {
+    gap: 24px;
+  } 
 }
 
 .customers-item {
-  flex-basis: calc((100% - 120px)/ 6);
-  width: 168px;
+  width: 190px;
   height: 88px;
+}
+
+@media screen and (min-width: 768px) {
+  .customers-item {
+    width: 168px;
+    /* flex-basis: calc((100% - 48px) / 3); */
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .customers-item {
+    flex-basis: calc((100% - 120px) / 6);
+  }
 }
 
 .customers-link {
@@ -410,44 +770,86 @@ body {
   justify-content: center;
   width: 100%;
   height: 100%;
-  color: var(--subtle-text-color);
+
+  fill: var(--subtle-text-color);
   border: 1px solid var(--subtle-text-color);
   border-radius: 4px;
 
-  transition: color var(--transition-hover), background-color var(--transition-hover);
+  transition: fill var(--transition-hover), border var(--transition-hover);
  }
 
 .customers-link:hover,
 .customers-link:focus {
-  color: var(--pressed-btn-color);
-  border-color: var(--pressed-btn-color);
+  fill: var(--pressed-btn-color);
+  border: 1px solid var(--pressed-btn-color);
   
 }
 
 .customers-icon {
-  display: block;
-  width: 104px;
-  height: 56px;
-  fill: currentColor;
+  height: 44px;
 }
+
+
 
 
 /* Footer */
 
+
 .footer {
-  padding-top: 100px;
-  padding-bottom: 100px;
+  padding-top: 96px;
+  padding-bottom: 96px;
 
   background-color: var(--secondary-text-color);
 }
 
-.footer-container {
-  display: flex;
+@media screen and (min-width: 1158px) {
+  .footer {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
 }
 
-.footer-logo-container {
-  margin-right: 120px;
+@media screen and (max-width: 767px) {
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 72px;
+  }
 }
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
+  .footer-container {
+    display: flex;
+    align-items: start;
+    flex-wrap: wrap;
+    padding-left: 108px;
+    gap: 72px 24px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-container {
+    display: flex;
+  }
+}
+
+
+@media screen and (max-width: 767px) {
+  .footer-logo-container {
+    /* margin-right: 0; */
+    width: 268px;
+    margin: 0 auto;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .footer-logo-container {
+    margin-right: 120px;
+  }
+}
+
 
 .footer-logo {
   display: block;
@@ -463,12 +865,21 @@ body {
   color: var(--background-light-mode);
 }
 
+@media screen and (max-width: 767px) {
+  .footer-logo,
+  .footer-social-text,
+  .subscribe-title {
+    text-align: center;
+  }
+}
+
 
 .footer-text {
-  max-width: 264px;
+  max-width: 268px;
 
   color: var(--accent-color);
 }
+
 
 .footer-social-text {
   margin-bottom: 16px;
@@ -517,9 +928,20 @@ body {
   fill: currentColor;
 }
 
-.footer-subscribe-container{
-  margin-left: 80px;
+
+@media screen and (max-width: 767px) {
+  .footer-subscribe-container{
+    margin-left: 0;
+  }
 }
+
+
+@media screen and (min-width: 1158px) {
+  .footer-subscribe-container{
+    margin-left: 80px;
+  }
+}
+
 
 .subscribe-title{
   margin-bottom: 16px;
@@ -532,10 +954,20 @@ body {
   color: var(--background-page-color);
 }
 
+
+@media screen and (max-width: 767px) {
+  .subscribe-form{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-items: center;
+    gap: 16px;
+  }
+}
+
 .subscribe-form{
   display: flex;
   justify-content: center;
-
 }
 
 .subscribe-input{
@@ -548,6 +980,13 @@ body {
   border-radius: 4px;
   border: 1px solid rgba(255, 255, 255, 0.3);
 }
+
+@media screen and (max-width: 767px) {
+  .subscribe-input {
+    min-width: 398px;
+  }
+}
+
 
 .subscribe-btn{
   display: flex;
@@ -576,6 +1015,12 @@ body {
 .subscribe-btn:hover,
 .subscribe-btn:focus{
   background-color: var(--pressed-btn-color)
+}
+
+@media screen and (max-width: 767px) {
+  .subscribe-btn {
+    margin-left: 0;
+  }
 }
 
 .subscribe-icon{
