--- a/css/styles.css
+++ b/css/styles.css
@@ -240,15 +240,14 @@ body {
 .menu-burger {
   border: none;
   cursor: pointer;
-  stroke: var(--secondary-text-color);
-  /* background-color: var(--background-page-color); */
+  background-color: var(--background-page-color);
   transition: transform var(--transition-hover);
 }
 
-/* .menu-burger-icon {
+.menu-burger-icon {
   display: inline-block;
-  stroke: #2E2F42;
-} */
+  fill: var(--secondary-text-color);
+}
 
 
 .mobile-menu {
@@ -258,6 +257,7 @@ body {
   right: 0;
   width: 100%;
   height: 100%;
+  z-index: 5;
 
   padding: 80px 35px 40px 40px;
   display: flex;
@@ -328,6 +328,12 @@ body {
 .mobile-contact-tel:hover,
 .mobile-contact-tel:focus {
   color: var(--pressed-btn-color);
+}
+
+@media screen and (max-width: 427px) {
+  .mobile-contact-tel {
+    font-size: 20px;
+  }
 }
 
 .mobile-contact-mail {
@@ -987,6 +993,12 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   }
 }
 
+@media screen and (max-width: 427px) {
+  .subscribe-input {
+    min-width: 264px;
+  }
+}
+
 
 .subscribe-btn{
   display: flex;
@@ -1035,16 +1047,47 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
 
 /* visually-hidden */
 
-.filtr-list{
-  display: flex;
-  gap: 24px;
-  justify-content: center;
-  margin-bottom: 72px;
+.section-portfolio {
+  padding-top: 48px;
+  padding-bottom: 48px;
 }
 
-/* .filtr-item{
-  
-} */
+@media screen and (min-width: 768px) {
+  .section-portfolio {
+    padding-top: 64px;
+    padding-bottom: 96px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .section-portfolio {
+    padding-top: 100px;
+    padding-bottom: 120px;
+  }
+}
+
+
+.filtr-list {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 16px 24px;
+  margin-bottom: 48px;
+}
+
+@media screen and (min-width: 768px) {
+  .filtr-list{
+    justify-content: center;
+    gap:24px;
+    margin-bottom: 64px;
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .filtr-list{
+    margin-bottom: 72px;
+  }
+}
+
 
 .filtr-btn {
   padding: 12px 24px;
@@ -1076,17 +1119,40 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
 
 .projects-list{
   display: flex;
-  gap:48px 24px;
-  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  gap: 48px;
 }
 
-.projects-item {
-  flex-basis: calc((100% - 48px)/ 3);
-  cursor: pointer;
-
-  transition: box-shadow var(--transition-hover);
+@media screen and (min-width: 768px) {
+  .projects-list{
+    flex-direction: row;
+    flex-wrap: wrap;
+    gap: 64px 24px;
+  }
 }
 
+@media screen and (min-width: 1158px) {
+  .projects-list{
+    gap:48px 24px;
+ }
+}
+
+
+@media screen and (min-width: 768px) {
+  .projects-item {
+    flex-basis: calc((100% - 24px)/ 2);
+    cursor: pointer;
+  
+    transition: box-shadow var(--transition-hover);
+  }
+}
+
+@media screen and (min-width: 1158px) {
+  .projects-item {
+    flex-basis: calc((100% - 48px)/ 3);
+  } 
+}
 
 .projects-item:hover,
 .projects-item:focus {
