--- a/css/styles.css
+++ b/css/styles.css
@@ -113,18 +113,18 @@ body {
   border-bottom: 1px solid var(--accent-color);
 }
 
-.page-header-container {
-  display: none;
+@media screen and (max-width:767px) {
+  .page-header-container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 24px 16px;
+  } 
 }
 
 @media screen and (min-width: 768px) {
   .page-header-container {
     display: flex;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  .page-header-container {
     align-items: center;
   }
 }
@@ -135,25 +135,37 @@ body {
   margin-right: auto;
 }
 
-.menu {
-  display: flex;
-  gap: 40px;
+@media screen and (max-width: 767px) {
+  .menu {
+    display: none;
+  }
+
+  .contact-list {
+    display: none;
+  }
 }
 
-.contact-list {
-  display: flex;
-  gap: 40px;
+
+@media screen and (min-width: 768px) {
+  .menu {
+    display: flex;
+    gap: 40px;
+  }
+
+  .contact-list {
+    display: flex;
+    gap: 40px;
+  }
 }
 
-@media screen and (max-width: 1158px) {
+
+@media screen and (min-width: 768px) and (max-width: 1157px) {
   .contact-list {
     display: block;
   }
 }
 
 .logo {
-  margin-right: 76px;
-
   font-family: "Raleway", sans-serif;
   font-weight: 800;
   font-size: 18px;
@@ -165,6 +177,12 @@ body {
 
 .logo-web {
   color: var(--primary-brand-color);
+}
+
+@media screen and (min-width: 768px) {
+  .logo {
+    margin-right: 76px;
+  }
 }
 
 .menu-link {
@@ -198,16 +216,40 @@ body {
   border-radius: 2px;
 }
 
-.contact-link {
-  padding: 24px 0;
+@media screen and (min-width: 768px) {
+  .contact-link {
+    display: block;
+  
+    font-style: normal;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.04em;
+    color: var(--primary-text-color);
+  
+    transition: color var(--transition-hover);
+  }
 
-  font-style: normal;
-  font-size: 12px;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-  color: var(--primary-text-color);
 
-  transition: color var(--transition-hover);
+  .contact-item:first-child {
+    margin-bottom: 12px;
+  }
+}
+
+
+@media screen and (min-width: 1158px) {
+  .contact-link {
+    padding: 24px 0;
+    
+    font-style: normal;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+  }
+
+  .contact-item:first-child {
+    margin-bottom: 0;
+  }
+
 }
 
 .contact-link:hover,
@@ -221,22 +263,6 @@ body {
   }
 }
 
-
-/* Mobile-menu */
-
-.header-container-mobile {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 24px 16px;
-}
-
-@media screen and (min-width: 768px) {
-  .header-container-mobile {
-    display: none;
-  }
-}
-
 .menu-burger {
   border: none;
   cursor: pointer;
@@ -244,11 +270,19 @@ body {
   transition: transform var(--transition-hover);
 }
 
+@media screen and (min-width: 767px) {
+  .menu-burger {
+    display: none;
+  }
+}
+
 .menu-burger-icon {
   display: inline-block;
   fill: var(--secondary-text-color);
 }
 
+
+/* Mobile-menu */
 
 .mobile-menu {
   position: fixed;
@@ -259,13 +293,7 @@ body {
   height: 100%;
   z-index: 5;
 
-  padding: 80px 35px 40px 40px;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: wrap;
-  justify-content: space-between;
-
-  background-color: var(--background-page-color);
+   background-color: var(--background-page-color);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
   
   transform: translateX(100%);
@@ -274,6 +302,17 @@ body {
 
 .mobile-menu.is-open {
   transform: translateX(0);
+}
+
+.mobile-menu-container {
+  display: flex;
+  flex-direction: column;
+
+  max-width: 428px;
+  min-height: 100vh;
+  padding: 80px 35px 40px 40px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 
@@ -298,6 +337,10 @@ body {
   color: var(--pressed-btn-color);
 }
 
+.current {
+  color: var(--pressed-btn-color);
+}
+
 .mobile-link-list {
   list-style: none;
 }
@@ -308,6 +351,8 @@ body {
 
 .mobile-adress {
   display: block;
+  margin-top: auto;
+  margin-bottom: 48px;
 }
 
 .mobile-contact-tel {
@@ -358,33 +403,52 @@ body {
   list-style: none;
 }
 
-.socials-list-mobile {
-  flex-wrap: wrap;
-}
-
 
 /* Hero */
 
 .hero {
   max-width: 1440px;
-  /* height: 600px;  */
   min-width: 320px;
   padding: 112px 0;
   margin: 0 auto;
 
   background-color: var(--secondary-text-color);
-  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office.jpg');
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office-mob.jpg');
 
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (max-width: 767px),
+@media screen and (min-device-pixel-ratio: 2) and (max-width: 427px),
 screen and (min-resolution: 192dpi) and (max-width: 767px),
 screen and (min-resolution: 2dppx) and (max-width: 767px) {
   .hero{
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office@2x.jpg');
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office-mob@2x.jpg');
+  }
+}
+
+
+@media screen and (min-width: 428px) and (max-width: 767px) {
+  .hero {
+    background-color: var(--secondary-text-color);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office-tab.jpg');
+  }
+}
+
+@media screen and (min-device-pixel-ratio: 2) and (min-width: 428px) and (max-width: 767px),
+screen and (min-resolution: 192dpi) and (min-width: 428px) and (max-width: 767px),
+screen and (min-resolution: 2dppx) and (min-width: 428px) and (max-width: 767px) {
+  .hero{
+    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office-tab@2x.jpg');
+  }
+}
+
+
+@media screen and (min-width: 768px) {
+  .hero {
+    background-color: var(--secondary-text-color);
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office.jpg');
   }
 }
 
@@ -396,15 +460,8 @@ screen and (min-resolution: 2dppx) and (min-width: 768px) {
   }
 }
 
-@media screen and (min-device-pixel-ratio: 2) and (min-width: 1158px),
-screen and (min-resolution: 192dpi) and (min-width: 1158px),
-screen and (min-resolution: 2dppx) and (min-width: 1158px) {
-  .hero{
-    background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url('../images/people-office@2x.jpg');
-  }
-}
 
-@media screen and (min-width: 768px) {
+@media screen and (min-width: 1158px) {
   .hero {
     max-width: 1440px;
     padding: 188px 0;
@@ -707,15 +764,24 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   fill: currentColor;
 }
 
-
 /* Socials-icon-mobile */
 
-.socials-list-mobile {
-  flex-direction: row;
-  align-items: center;
-  margin: 0;
-  padding: 0;
-  gap: 56px;
+@media screen and (max-width: 767px) {
+  .socials-list-mobile {
+    flex-direction: row;
+    justify-content: flex-start;
+    align-items: center;
+    flex-wrap: wrap;
+    margin: 0;
+    padding: 0;
+    gap: 56px;
+  }
+}
+
+@media screen and (max-width: 427px) {
+  .socials-list-mobile {
+    gap: 24px;
+  }
 }
 
 .socials-icon-mobile {
@@ -799,7 +865,6 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
 
 
 /* Footer */
-
 
 .footer {
   padding-top: 96px;
@@ -1232,9 +1297,8 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
 
   padding: 72px 24px 24px;
   width: 100%;
-  height: 100%;
   max-width: 408px;
-  max-height: 584px;
+  min-height: 584px;
 
   background-color: var(--modal-background-color);
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -1421,13 +1485,15 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
 
 .checkbox-label::before {
   display: block;
+  flex-shrink: 0;
+  margin-right: 8px;
   width: 16px;
   height: 16px;
+
   border: 1.25px solid var(--secondary-text-color);
   cursor: pointer;
   border-radius: 2px;
   content: '';
-  margin-right: 8px;
 }
 
 .checkbox-input:checked + .checkbox-label::before {
@@ -1444,7 +1510,6 @@ screen and (min-resolution: 2dppx) and (min-width: 1158px) {
   text-decoration-line: underline;
   color: var(--primary-brand-color);
   transition: color var(--transition-hover);
-  padding-left: 4px;
 }
 
 .modal-btn{
